# crewai-setup

research_analysis/: README.md  pyproject.toml
research_analysis/src/research_analysis/: crew.py  main.py
