[project]
name = "research_analysis"
version = "0.1.0"
description = "research-analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
research_analysis = "research_analysis.main:run"
run_crew = "research_analysis.main:run"
train = "research_analysis.main:train"
replay = "research_analysis.main:replay"
test = "research_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
